updating README with event-based testing code

--- a/notebooks/Compute_Success_Metrics.ipynb
+++ b/notebooks/Compute_Success_Metrics.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Compute success metrics\n",
     "\n",
-    "Use an [the timescoring event-based success evaluation library](https://pypi.org/project/timescoring/) to detect how well your predicted cough locations match the ground-truth locations in the dataset in this illustrative example."
+    "Use [the timescoring event-based success evaluation library](https://pypi.org/project/timescoring/) to detect how well your predicted cough locations match the ground-truth locations in the dataset in this illustrative example."
    ]
   },
   {
@@ -192,6 +192,35 @@
     "F1 = scores_evt.f1\n",
     "print(\"There are {0} True Positive events, {1} False Positive events, and {2} False negative events.\".format(TP, FP, FN))\n",
     "print(\"The classifier has a Sensitivity of {0}, a Precision of {1}, and an F-1 score of {2} on this sample\".format(SE, PR, F1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f6687c",
+   "metadata": {},
+   "source": [
+    "### Calculate False Positives per Hour\n",
+    "In this toy example, we only use one short recording to measure the False Positives per hour of the classifier. In reality, this would be the combined number of false positives over multiple recordings or a long recording, divided by the total recording time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "e4442368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False positives per hour: 319.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "hours_of_recording = len(audio)/(FS_AUDIO*3600)\n",
+    "FPhr = FP/hours_of_recording\n",
+    "print(\"False positives per hour: {0}\".format(round(FPhr,2)))"
    ]
   },
   {
