fix matplotlib bug

--- a/notebooks/Compute_Success_Metrics.ipynb
+++ b/notebooks/Compute_Success_Metrics.ipynb
@@ -36,7 +36,7 @@
     "sys.path.append(os.path.abspath('../src'))\n",
     "from helpers import *\n",
     "from timescoring.annotations import Annotation\n",
-    "from timescoring import scoring"
+    "from timescoring import scoring, visualization"
    ]
   },
   {
@@ -249,7 +249,6 @@
     }
    ],
    "source": [
-    "from timescoring import visualization\n",
     "figEvents = visualization.plotEventScoring(reference, prediction, param)"
    ]
   }
